# Project-AFIS

./: README.md
NBIS_python-master/: bozorth3  dataanalyze.py  fingerprinttxt.py  mindtct  minutiae_dtct.py  movexytfiles.py  run_bozorth3.py  运行步骤
datasets/NBIS_DB1_B/: result_DB1-B.txt  统计
datasets/NBIS_DB1_B/result/: 101_1.brw  101_1.dm  101_1.hcm  101_1.lcm  101_1.lfm  101_1.min  101_1.qm  101_1.xyt  101_2.brw  101_2.dm  101_2.lcm  101_2.lfm  101_2.min  101_2.qm  101_2.xyt  101_3.brw  101_3.dm  101_3.lcm  101_3.lfm  101_3.min  101_3.qm  101_4.brw  101_4.dm  101_4.lcm  101_4.lfm  101_4.min  101_4.qm  101_4.xyt  101_5.brw  101_5.dm  101_5.lcm  101_5.lfm  101_5.min  101_5.qm  101_6.brw  101_6.dm  101_6.hcm  101_6.lcm  101_6.lfm  101_6.min  (+543 more)
datasets/NBIS_DB1_B/xyt/: 101_3.xyt  101_5.xyt  101_6.xyt  103_3.xyt  103_7.xyt  103_8.xyt  104_1.xyt  104_2.xyt  104_3.xyt  104_4.xyt  104_7.xyt  105_1.xyt  105_2.xyt  105_3.xyt  105_5.xyt  105_6.xyt  105_7.xyt  105_8.xyt  106_3.xyt  106_5.xyt  106_6.xyt  106_8.xyt  107_3.xyt  107_4.xyt  107_5.xyt  107_6.xyt  107_7.xyt  107_8.xyt  108_1.xyt  108_4.xyt  108_6.xyt  108_8.xyt  109_1.xyt  109_2.xyt  109_5.xyt  109_6.xyt  110_1.xyt  110_4.xyt  110_7.xyt  110_8.xyt
datasets/NBIS_fingerprints/: result-R2111000403002020050006.txt
datasets/NBIS_fingerprints/R2111000403002020050006-result/: R2111000403002020050006_RP_1-0.brw  (+593 more)
datasets/NBIS_fvc2002/: fvc2002_testresult.txt  排序.txt  统计  统计纯个数
mpi-afis/: CMakeLists.txt  README.md
mpi-afis/MCC/: MCC.cpp  main.cpp
mpi-afis/Parallel/: IOHandler.cpp
mpi-afis/commons/: Fingerprint.cpp
(+583 files in other folders)
